Fix for calendar height + align checkboxes in calendar left

--- a/resources/dynamic/style.css
+++ b/resources/dynamic/style.css
@@ -325,7 +325,7 @@ body, html {
 }
 
 .askia-radio, .askia-checkbox {
-  float: none !important;
+  float: left !important;
 }
 
 .askia-grid-row > td >.askia-radio, .askia-grid-row > td > .askia-checkbox {
@@ -572,7 +572,8 @@ input[type=week]:hover {
 }
 .main {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 70px);
+  min-height: calc(100% - 70px);
   position: absolute;
   top: 70px;
   left: 0px;
